--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,8 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
-    "font-awesome": "~4.4.0",
-    "roboto-fontface": "~0.2.4",
-    "jquery.tools": "~1.2.7"
+    "font-awesome": "~4.2.0",
+    "roboto-fontface": "~0.2.4"
   },
   "ignore": [
     "**/.*",
